Fixing data visibility issues

--- a/app/assets/stylesheets/pages.css.sass
+++ b/app/assets/stylesheets/pages.css.sass
@@ -219,6 +219,7 @@ nav
   .devise
     @include container
     padding-top: 20px
+    padding-bottom: 20px
     .centered-form
       @include span-columns(4,12)
       @include squish(4,4)
@@ -424,7 +425,7 @@ nav
   color: $good-color
   border-color: $good-color
 
-.askers, .nearby, .week
+.askers, .nearby, .week, .user-feedback
   color: #ff5b54
   border-color: #ff5b54
 
